(preview/tck.test) eliminated few [rawtypes], [serial], [deprecation] javac warnings